feature/#115 - Implemented GetUserRecommendation
